@@ -1,48 +1,27 @@
 #!/usr/bin/env python
 
-# Copyright (C) 2005 Osmo Salomaa
-#
-# This file is part of Gaupol.
-#
-# Gaupol is free software; you can redistribute it and/or modify
-# it under the terms of the GNU General Public License as published by
-# the Free Software Foundation; either version 2 of the License, or
-# (at your option) any later version.
-#
-# Gaupol is distributed in the hope that it will be useful,
-# but WITHOUT ANY WARRANTY; without even the implied warranty of
-# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
-# GNU General Public License for more details.
-#
-# You should have received a copy of the GNU General Public License
-# along with Gaupol; if not, write to the Free Software
-# Foundation, Inc., 51 Franklin St, Fifth Floor, Boston, MA  02110-1301  USA
-
-
-"""Print dependency versions."""
-
+"""Print version numbers of dependencies."""
 
 import sys
 
-
-print 'Python version:',
+print 'Python:',
 print '%d.%d.%d' % sys.version_info[:3]
 
-print 'GTK version:',
+print 'GTK:',
 try:
     import gtk
     print '%d.%d.%d' % gtk.gtk_version
 except ImportError:
     print 'Not found'
 
-print 'PyGTK version:',
+print 'PyGTK:',
 try:
     import gtk
     print '%d.%d.%d' % gtk.pygtk_version
 except ImportError:
     print 'Not found'
 
-print 'PyEnchant version:',
+print 'PyEnchant:',
 try:
     import enchant
     print enchant.__version__
